--- a/src/app/products/product-detail/product-detail.page.html
+++ b/src/app/products/product-detail/product-detail.page.html
@@ -44,4 +44,8 @@
     <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
     Regresar a la lista de productos
   </ion-button>
+  <ion-button expand="block" fill="clear" color="danger">
+    <ion-icon name="trash-outline" slot="start"></ion-icon>
+    Eliminar producto
+  </ion-button>
 </ion-content>
