--- a/src/app/products/product-edit/product-edit.page.html
+++ b/src/app/products/product-edit/product-edit.page.html
@@ -1,9 +1,41 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>product-edit</ion-title>
+    <ion-title>Editar Producto</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content fullscreen>
+  <ion-item>
+    <ion-icon name="code-outline" slot="start"></ion-icon>
+    <ion-label position="floating">Codigo</ion-label>
+    <ion-input type="text" [(ngModel)]="product.code" disabled></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="pricetags-outline" slot="start"></ion-icon>
+    <ion-label position="floating">Nombre</ion-label>
+    <ion-input type="text" [(ngModel)]="product.name"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="document-text-outline" slot="start"></ion-icon>
+    <ion-label position="floating">Descripción</ion-label>
+    <ion-input type="text" [(ngModel)]="product.description"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="cash-outline" slot="start"></ion-icon>
+    <ion-label position="floating">Precio</ion-label>
+    <ion-input type="number" [(ngModel)]="product.price"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-icon name="calculator-outline" slot="start"></ion-icon>
+    <ion-label position="floating">Cantidad minima</ion-label>
+    <ion-input type="number" [(ngModel)]="product.min_Quantity"></ion-input>
+  </ion-item>
+  <ion-button expand="block" fill="clear" color="warning" (click)="submit()">
+    <ion-icon name="pencil" slot="start"></ion-icon>
+    Editar Producto
+  </ion-button>
+  <ion-button expand="block" fill="clear" [routerLink]="['/products']">
+    <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
+    Regresar a la lista de productos
+  </ion-button>
 </ion-content>
