--- a/src/app/products/product-detail/product-detail.page.html
+++ b/src/app/products/product-detail/product-detail.page.html
@@ -53,7 +53,7 @@
     <ion-icon name="pencil" slot="start"></ion-icon>
     Editar Producto
   </ion-button>
-  <ion-button expand="block" fill="clear" color="danger">
+  <ion-button expand="block" fill="clear" color="danger" (click)="delete()">
     <ion-icon name="trash-outline" slot="start"></ion-icon>
     Eliminar producto
   </ion-button>
