--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="products">
+        <ion-icon name="cube"></ion-icon>
+        <ion-label>Productos</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="clients">
+        <ion-icon name="person-circle"></ion-icon>
+        <ion-label>Clientes</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="invoices">
+        <ion-icon name="receipt"></ion-icon>
+        <ion-label>Facturas</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="reports">
+        <ion-icon name="analytics"></ion-icon>
+        <ion-label>Reportes</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
