--- a/src/app/products/product-create/product-create.page.html
+++ b/src/app/products/product-create/product-create.page.html
@@ -1,5 +1,14 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button expand="block" fill="clear" [routerLink]="['/products']">
+        <ion-icon
+          name="arrow-back-outline"
+          color="tertiary"
+          slot="start"
+        ></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Crear nuevo producto</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -33,9 +42,5 @@
   <ion-button expand="block" fill="clear" color="success" (click)="submit()">
     <ion-icon name="add-circle-outline" slot="start"></ion-icon>
     Crear producto
-  </ion-button>
-  <ion-button expand="block" fill="clear" [routerLink]="['/products']">
-    <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
-    Regresar a la lista de productos
   </ion-button>
 </ion-content>
