--- a/src/app/reports/report-query/report-query.page.html
+++ b/src/app/reports/report-query/report-query.page.html
@@ -25,6 +25,15 @@
     <ion-label position="floating">Numero de factura</ion-label>
     <ion-input type="number" [(ngModel)]="query.Invoice_Number"></ion-input>
   </ion-item>
+
+  <ion-item detail="false" (click)="selectClient()">
+    <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+    <ion-label
+      >Cliente: {{ currentClient?.name }} - {{ currentClient?.nit }}</ion-label
+    >
+    <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+  </ion-item>
+
   <ion-button expand="block" fill="clear" color="success" (click)="submit()">
     <ion-icon name="add-circle-outline" slot="start"></ion-icon>
     Consultar
