--- a/src/app/reports/report-query/report-query.page.html
+++ b/src/app/reports/report-query/report-query.page.html
@@ -28,9 +28,19 @@
 
   <ion-item detail="false" (click)="selectClient()">
     <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-    <ion-label
-      >Cliente: {{ currentClient?.name }} - {{ currentClient?.nit }}</ion-label
-    >
+    <ion-label>
+      <h2>Cliente: {{ currentClient?.name }}</h2>
+      <p>{{ currentClient?.nit }}</p>
+    </ion-label>
+    <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+  </ion-item>
+
+  <ion-item detail="false" (click)="selectBranch()">
+    <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+    <ion-label>
+      <h2>Sucursal: {{ currentBranch?.name }}</h2>
+      <p>{{ currentBranch?.direction }}</p>
+    </ion-label>
     <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
   </ion-item>
 
