--- a/src/app/reports/report-query/report-query.page.html
+++ b/src/app/reports/report-query/report-query.page.html
@@ -44,6 +44,17 @@
     <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
   </ion-item>
 
+  <ion-item detail="false" (click)="selectProduct()">
+    <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+    <ion-label>
+      <h2>Producto: {{ currentProduct?.name }}</h2>
+      <p>
+        {{ currentProduct?.price | currency: "GTQ":"symbol-narrow":"1.2-2" }}
+      </p>
+    </ion-label>
+    <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+  </ion-item>
+
   <ion-button expand="block" fill="clear" color="success" (click)="submit()">
     <ion-icon name="add-circle-outline" slot="start"></ion-icon>
     Consultar
