--- a/src/app/invoices/invoices.page.html
+++ b/src/app/invoices/invoices.page.html
@@ -38,4 +38,19 @@
     </ion-label>
     <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
   </ion-item>
+
+  <ion-item detail="false" (click)="addProduct()">
+    <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+    <ion-label>
+      <h2>Agregar Producto</h2>
+    </ion-label>
+    <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+  </ion-item>
+  <ion-item detail="false" (click)="viewProducts()">
+    <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+    <ion-label>
+      <h2>Ver Productos</h2>
+    </ion-label>
+    <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+  </ion-item>
 </ion-content>
