--- a/src/app/shared/branch-item/branch-item.component.html
+++ b/src/app/shared/branch-item/branch-item.component.html
@@ -1,12 +1,9 @@
 <ion-item detail="false">
-  <ion-icon name="cube-outline" slot="start"></ion-icon>
+  <ion-icon name="storefront-outline" slot="start"></ion-icon>
   <ion-label>
     <h2>{{ branch?.name }}</h2>
-    <!-- <h2>{{ product?.code }} - {{ product?.name }}</h2> -->
-
     <p>
       {{ branch?.direction }}
-      <!-- Precio: {{ product?.price | currency: "GTQ":"symbol-narrow":"1.2-2" }} -->
     </p>
   </ion-label>
   <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
