--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,11 @@
 
   <ion-tabs>
     <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="home">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </ion-tab-button>
+
       <ion-tab-button tab="products">
         <ion-icon name="cube"></ion-icon>
         <ion-label>Productos</ion-label>
