--- a/src/app/reports/report-list/report-list.component.html
+++ b/src/app/reports/report-list/report-list.component.html
@@ -14,19 +14,21 @@
 </ion-header>
 
 <ion-content fullscreen>
-  <ion-item *ngFor="let item of results">
-    <ion-label>
-      <h2>{{ item.serial_Number }} - {{ item.invoice_Number }}</h2>
-      <p>Cliente: {{ item.client_Name }}</p>
-      <p>Sucursal: {{ item.branch_Name }}</p>
-      <p>Producto: {{ item.product_Name }}</p>
-      <p>Cantidad: {{ item.quantity | number }}</p>
-      <p>Total: {{ item.total | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
-      <p>
-        Total de la factura:
-        {{ item.order_Total | currency: "GTQ":"symbol-narrow":"1.2-2" }}
-      </p>
-    </ion-label>
-    <!-- <ion-icon name="chevron-forward-outline" slot="end"></ion-icon> -->
-  </ion-item>
+  <ion-list>
+    <ion-item *ngFor="let item of results" (click)="view(item.order_Id)">
+      <ion-label>
+        <h2>{{ item.serial_Number }} - {{ item.invoice_Number }}</h2>
+        <p>Cliente: {{ item.client_Name }} - {{ item.client_Nit }}</p>
+        <p>Sucursal: {{ item.branch_Name }} - {{ item.direction }}</p>
+        <p>Producto: {{ item.product_Code }} - {{ item.product_Name }}</p>
+        <p>Cantidad: {{ item.quantity | number }}</p>
+        <p>Total: {{ item.total | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
+        <p>
+          Total de la factura:
+          {{ item.order_Total | currency: "GTQ":"symbol-narrow":"1.2-2" }}
+        </p>
+      </ion-label>
+      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
