--- a/src/app/reports/report-invoice/report-invoice.component.html
+++ b/src/app/reports/report-invoice/report-invoice.component.html
@@ -10,8 +10,8 @@
       </ion-button>
     </ion-buttons>
     <ion-title
-      >Factura {{ invoice?.serial_Number }} -
-      {{ invoice?.invoice_Number }}</ion-title
+      >Factura {{ result.serial_Number }} -
+      {{ result.invoice_Number }}</ion-title
     >
   </ion-toolbar>
 </ion-header>
@@ -24,19 +24,19 @@
   <ion-item>
     <ion-label>Nombre</ion-label>
     <ion-text>
-      <p>{{ invoice?.client_Name }}</p>
+      <p>{{ result.client_Name }}</p>
     </ion-text>
   </ion-item>
   <ion-item>
     <ion-label>Dirección</ion-label>
     <ion-text>
-      <p>{{ invoice?.client_Direction }}</p>
+      <p>{{ result.client_Direction }}</p>
     </ion-text>
   </ion-item>
   <ion-item>
     <ion-label>Nit</ion-label>
     <ion-text>
-      <p>{{ invoice?.client_Nit }}</p>
+      <p>{{ result.client_Nit }}</p>
     </ion-text>
   </ion-item>
   <ion-item>
@@ -46,13 +46,13 @@
   <ion-item>
     <ion-label>Nombre</ion-label>
     <ion-text>
-      <p>{{ invoice?.branch_Name }}</p>
+      <p>{{ result.branch_Name }}</p>
     </ion-text>
   </ion-item>
   <ion-item>
     <ion-label>Dirección</ion-label>
     <ion-text>
-      <p>{{ invoice?.branch_Direction }}</p>
+      <p>{{ result.branch_Direction }}</p>
     </ion-text>
   </ion-item>
   <ion-item>
@@ -62,21 +62,66 @@
   <ion-item>
     <ion-label>Total</ion-label>
     <ion-text>
-      <p>{{ invoice?.total | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
+      <p>{{ result.total | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
     </ion-text>
   </ion-item>
   <ion-item>
     <ion-label>Fecha</ion-label>
     <ion-text>
-      <p>{{ invoice?.order_Date | parseDate }}</p>
+      <p>{{ result.order_Date | parseDate }}</p>
     </ion-text>
   </ion-item>
   <ion-item>
     <ion-icon name="cube-outline" slot="start"></ion-icon>
-    <h2>Productos</h2>
+    <h2>Producto</h2>
   </ion-item>
-  <ion-list>
-    <ion-item *ngFor="let item of invoice?.product_Detail">
+  <ion-item>
+    <ion-label>Codigo</ion-label>
+    <ion-text>
+      <p>{{ result.product_Code }}</p>
+    </ion-text>
+  </ion-item>
+  <ion-item>
+    <ion-label>Nombre</ion-label>
+    <ion-text>
+      <p>{{ result.product_Name }}</p>
+    </ion-text>
+  </ion-item>
+  <ion-item>
+    <ion-label>Descripción</ion-label>
+    <ion-text>
+      <p>{{ result.product_Description }}</p>
+    </ion-text>
+  </ion-item>
+  <ion-item>
+    <ion-label>Cantidad</ion-label>
+    <ion-text>
+      <p>{{ result.quantity | number }}</p>
+    </ion-text>
+  </ion-item>
+  <ion-item>
+    <ion-label>Precio</ion-label>
+    <ion-text>
+      <p>{{ result.price | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
+    </ion-text>
+  </ion-item>
+  <ion-item>
+    <ion-label>Total</ion-label>
+    <ion-text>
+      <p>{{ result.total | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
+    </ion-text>
+  </ion-item>
+  <!-- <ion-label>
+      <h2>{{ result.product_Code }} - {{ result.product_Name }}</h2>
+      <p>Cantidad: {{ result.quantity | number }}</p>
+      <p>
+        Precio: {{ result.price | currency: "GTQ":"symbol-narrow":"1.2-2" }}
+      </p>
+      <p>Total: {{ result.total | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
+    </ion-label>
+  </ion-item> -->
+  <!-- <ion-list>
+    <ion-item *ngFor="let item of result.product_Detail">
       <ion-label>
         <h2>{{ item.product_Code }} - {{ item.product_Name }}</h2>
         <p>Cantidad: {{ item.quantity | number }}</p>
@@ -86,5 +131,5 @@
         <p>Total: {{ item.total | currency: "GTQ":"symbol-narrow":"1.2-2" }}</p>
       </ion-label>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
 </ion-content>
